force-app/main/default/objects/Timesheet__c/fields/Date_Week_End__c.field-meta.xml
<CustomField>
    <fullName>Date_Week_End__c</fullName>
    <formula>Date_Week_Start__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Week End</label>
    <type>Date</type>
</CustomField>