force-app/main/default/objects/Timesheet__c/fields/Date_Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Week_Start__c</fullName>
    <label>Date Week Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>