force-app/main/default/objects/Timesheet__c/fields/Employee_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Employee_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Submitted</label>
    <type>Checkbox</type>
</CustomField>