force-app/main/default/objects/Timesheet__c/fields/Employee_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Submitted_Date__c</fullName>
    <label>Employee Submitted Date</label>
    <type>DateTime</type>
</CustomField>