force-app/main/default/objects/Timesheet__c/fields/Total_Hours_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Text__c</fullName>
    <formula>TEXT(MFLOOR(Total_Minutes__c/60)) + &quot;:&quot;
+ RIGHT(&quot;0&quot; + TEXT(MOD(Total_Minutes__c, 60)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Text</label>
    <type>Text</type>
</CustomField>