force-app/main/default/objects/Timesheet__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <label>Total Minutes</label>
    <summarizedField>Timesheet_Item__c.Minutes_Calc__c</summarizedField>
    <summaryForeignKey>Timesheet_Item__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>