force-app/main/default/objects/Timesheet__c/validationRules/Timesheet_Week_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Timesheet_Week_Start</fullName>
    <active>true</active>
    <errorConditionFormula>WEEKDAY(Date_Week_Start__c) != 2</errorConditionFormula>
    <errorMessage>Date Week Start must be a Monday</errorMessage>
</ValidationRule>