force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Member__c</columns>
    <columns>Date_Week_Start__c</columns>
    <columns>Date_Week_End__c</columns>
    <columns>Total_Hours_Text__c</columns>
    <columns>Employee_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>